2003-10-06  Don Porter  <dgp@users.sourceforge.net>

	* doc/ConfigWidg.3:	Removed reference to Tk_Offset from the
	NAME section to resolve mkLinks conflict with SetOptions.3 [Bug 404197]

	* unix/configure.in:	Reconfigured to use $TCL_PREFIX as the
	default value of --prefix, and also added warning when a TK_PREFIX
	value different from TCL_PREFIX is selected, since [package require Tk]
	fails in that configuration. [Bugs 428627,765642]

        * unix/tcl.m4 (SC_PATH_TCLCONFIG):      Corrected search path so
        that alpha and beta releases of Tcl are not favored. [Bug 608698]

	* unix/configure.in:	Added check that version of Tcl header found
	by configure matches that of the Tk we wish to build.  As long as
	the Tk sources insist on lockstep releases, Tk's configuration should
	verify that's what we have.  [Bug 749088]

	* unix/configure:	autoconf (2.13)
	* unix/mkLinks:		make mklinks

2003-10-03  Don Porter  <dgp@users.sourceforge.net>

	* README:				Bumped to patch level 8.4.5
	* generic/tk.h:				to prepare for next patch
	* macosx/Wish.pbproj/project.pbxproj:	release.
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:

2003-10-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/scale.tcl: Clear bug with chording mouse buttons.

2003-10-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
	Added support for all applicable customizable makefile variables
	from tcl/macosx/Makefile.

	* macosx/README:
	* macosx/Wish.pbproj/project.pbxproj: ensure that the versioned
	wishX.X script works correctly when Tk.framework with multiple
	versions is present by referring to a copy of 'Wish Shell.app'
	located in Tk.framework/Versions/X.X/Resources.

2003-09-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tcl.m4 (SC_ENABLE_FRAMEWORK): Added note to make it clearer